nestedtemplates/virtualNetwork.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "metadata": {
        "description": "The name of the virtual network to create"
      }
    },
    "managementSubnetName": {
      "type": "string",
      "metadata": {
        "description": "The name of subnet to create for management tier"
      }
    },
    "directorySubnetName": {
      "type": "string",
      "metadata": {
        "description": "The name of subnet to create for directory tier"
      }
    },
    "webSubnetName": {
      "type": "string",
      "metadata": {
        "description": "The name of subnet to create for web tier"
      }
    },
    "dataSubnetName": {
      "type": "string",
      "metadata": {
        "description": "The name of subnet to create for data tier"
      }
    },
    "dnsServers": {
      "type": "array",
      "metadata": {
        "description": "List of DNS servers in the network"
      }
    }
  },
  "variables": {
    "managementNetworkSecurityGroupName": "[concat(parameters('managementSubnetName'), '-nsg')]",
    "directoryNetworkSecurityGroupName": "[concat(parameters('directorySubnetName'), '-nsg')]",
    "webNetworkSecurityGroupName": "[concat(parameters('webSubnetName'), '-nsg')]",
    "dataNetworkSecurityGroupName": "[concat(parameters('dataSubnetName'), '-nsg')]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('managementNetworkSecurityGroupName')]",
      "apiVersion": "2018-01-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowRdpInbound",
            "properties": {
              "description": "Allow inbound RDP traffic from the Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.0.0.128/25",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('directoryNetworkSecurityGroupName')]",
      "apiVersion": "2018-01-01",
      "location": "[resourceGroup().location]"
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('webNetworkSecurityGroupName')]",
      "apiVersion": "2018-01-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpsInbound",
            "properties": {
              "description": "Allow inbound 443 traffic from the Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.0.2.0/24",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('dataNetworkSecurityGroupName')]",
      "apiVersion": "2018-01-01",
      "location": "[resourceGroup().location]"
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "apiVersion": "2017-09-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('managementNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('directoryNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('webNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('dataNetworkSecurityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('managementSubnetName')]",
            "properties": {
              "addressPrefix": "10.0.0.128/25",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('managementNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[parameters('directorySubnetName')]",
            "properties": {
              "addressPrefix": "10.0.1.0/27",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('directoryNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[parameters('webSubnetName')]",
            "properties": {
              "addressPrefix": "10.0.2.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('webNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[parameters('dataSubnetName')]",
            "properties": {
              "addressPrefix": "10.0.3.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dataNetworkSecurityGroupName'))]"
              }
            }
          }
        ],
        "dhcpOptions": {
          "dnsServers": "[parameters('dnsServers')]"
        }
      }
    }
  ]
}
